# playground

./: .gitignore  LICENSE
.github/workflows/: main.yml
.net/SampleMcpServer/: .gitignore  (+3 more)
GenevaDebugging/: .gitignore
atl/: .gitignore
docs/: adot-aspnetcore-iis.md  aws-xray-security-analysis-report.md  perf.md  where-is-netty.md
lambdaWithSpringBoot/: build.gradle  readme.md
lambdaWithSpringBoot-AutoOnly/: build.gradle  readme.md  settings.gradle
models/: deepseek-one.py  llamaindex-one.py  llamaindex-two.py  ollama-one.py  qwen-one.py
nodejs-lambda-simple/: index.mjs  package-lock.json  package.json
nodejs-lambda-simpleJs/: context-test.js  index.js  index.mjs  initOTelAuto.js  initOTelManualFoo.js  package-lock.json  package.json  register-meter.js
nodejs-webapi-lambda/: index.mjs  package-lock.json  package.json
nodejs-webapi-lambda-sdkv2/: package-lock.json  package.json
nodejs-webapi-lambda-serverlessHttp/: index.mjs  package-lock.json  package.json
otel-java-agent-stream-handler-fix/: new-x.patch
powershell/: runme.ps1
python-hackathon/: analyze_span.py  download_span.py  download_trace.py  embedding.py  query.py  readable_span.py  readme.md  test.py  util.py
python/mcp/python-mcp-server-foo/: README.md  main.py  pyproject.toml  zrun.sh
python/mcp/python-mcp-server-foo/mcp_simple_tool/: oteltest.py  server.py
python/otel-foo/: main.py  pyproject.toml
spring-boot-3.4-with-spring-cloud-function/: .gitignore  .project  pom.xml  template.yaml
springBootWithGradle/: build.gradle
springBootWithGradle-NoLambda/: build.gradle
(+945 files in other folders)
