[project]
name = "python-mcp-server-foo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.17",
    "mcp[cli]>=1.16.0",
]

[project.scripts]
python-mcp-server-foo = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
